[package]
name = "ztm"
version = "1.0.0"
description = "ZTM"
authors = ["flomesh"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ztm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "=2.2.0", features = [] }

[dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri = { version = "=2.5.1", features = [ "protocol-asset", "macos-proxy", "macos-private-api", "image-ico", "image-png", "tray-icon", "unstable"] }
tauri-utils = "=2.4.0"
tauri-runtime = "=2.6.0"
tauri-plugin-shell = "=2.2.1"
tauri-plugin-process = "=2.2.1"
tauri-plugin-http = { version = "=2.4.4", features = ["rustls-tls", "unsafe-headers"] }
tauri-plugin-os = "=2.2.1"
tauri-plugin-upload = "=2.2.1"
tauri-plugin-notification = "=2.2.2"
tauri-plugin-fs = "=2.3.0"
tauri-plugin-dialog = "=2.2.2"
tauri-plugin-persisted-scope = "=2.2.2"
tauri-plugin-deep-link = "=2.3.0"
tauri-plugin-clipboard-manager = "=2.2.2"
tauri-plugin-log = "=2.4.0"
tauri-plugin-share = "=2.0.5"
tauri-plugin-store = "=2.2.0"
tauri-plugin-keychain = "=2.0.2"
# tauri-plugin-keychain = { path = "../src-plugin/tauri-plugin-keychain/" }
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.2"
libloading = "=0.8.5"
j4rs = "0.20.0"
wry = "0.47.2"
# tao = "0.28.1"
# oslog = "0.2.0"
log = "0.4"
rsa = "0.9.6"
rand = "0.8"
rust-argon2 = "2.1.0"
deranged = "=0.4.0"

[target."cfg(any(target_os = \"ios\"))".dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"


[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "=2.2.0"

[target.'cfg(any(target_os = "android"))']
linker = "~/Library/Android/sdk/ndk/27.0.11718014/toolchains/llvm/prebuilt/darwin-x86_64/bin"
