[package]
name = "tauri-plugin-share"
version = "0.1.0"
authors = [ "flomesh" ]
description = "A Tauri share plugin"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/shares", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-share"

[dependencies]
tauri = { version = "2.0.6" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
